@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.313 2018/01/14 03:37:32 ryoon Exp $
+# $NetBSD: Makefile,v 1.314 2018/03/02 15:11:48 wiz Exp $
 #
 
 COMMENT=	Fonts
@@ -157,7 +157,6 @@ SUBDIR+=	koruri-ttf
 SUBDIR+=	lanna-io
 SUBDIR+=	lato-ttf
 SUBDIR+=	lcdftypetools
-SUBDIR+=	libXfontcache
 SUBDIR+=	liberation-ttf
 SUBDIR+=	libfontenc
 SUBDIR+=	linux-libertine-ttf
