@@ -1,1 +1,0 @@
-Xfontcache - X-TrueType font cache extension client library.
