@@ -1,9 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2013/05/31 01:10:55 rodent Exp $
-lib/libXfontcache.la
-lib/pkgconfig/xfontcache.pc
-man/man3/FontCacheChangeCacheSettings.3
-man/man3/FontCacheGetCacheSettings.3
-man/man3/FontCacheGetCacheStatistics.3
-man/man3/FontCacheQueryExtension.3
-man/man3/FontCacheQueryVersion.3
-man/man3/Xfontcache.3
