@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.2 2015/11/03 20:44:36 agc Exp $
-
-SHA1 (libXfontcache-1.0.5.tar.bz2) = 9e9bfee1a143cbe9486830d53f8f9cc0a91be472
-RMD160 (libXfontcache-1.0.5.tar.bz2) = eae3a4c643600b5e6a4a069cdb1598c5d3f13cbb
-SHA512 (libXfontcache-1.0.5.tar.bz2) = cd11231b95d3d3be9deb82e61506e58281150d743b07d05716aa627ab31005cf0f963ef2b96eafc65c4a0438f7ff93cdfab25022a05961ea1ff184d47c131310
-Size (libXfontcache-1.0.5.tar.bz2) = 240293 bytes
