@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2018,v 1.983 2018/03/02 15:09:53 wiz Exp $
+$NetBSD: CHANGES-2018,v 1.984 2018/03/02 15:11:48 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2018:
 
@@ -1378,3 +1378,4 @@ Changes to the packages collection and infrastructure in 2018:
 	Updated devel/py-multipledispatch to 0.5.0 [adam 2018-03-02]
 	Updated x11/libXfont to 1.5.4nb1 [wiz 2018-03-02]
 	Updated x11/libXfont2 to 2.0.3nb1 [wiz 2018-03-02]
+	Removed fonts/libXfontcache [wiz 2018-03-02]
